chore(context): slim CLAUDE.md, refresh RC6 skill, guard the annotations API
The always-loaded context had drifted: CLAUDE.md carried a field-type table that
the bundled `blindbean` skill already documents in more detail, plus release and
Codecov material that is only ever needed when doing those specific tasks.

- Move the release procedure to docs/RELEASING.md (+ a pre-tag checklist) and the
  CI job layout, Codecov traps and VibeTags generation rules to docs/CI-NOTES.md,
  leaving the rules an agent can actually violate inline.
- Condense the field-type table to the scheme mapping and point at the skill for
  the encoding column. The correctness bullets (decryptSigned, the ~20-bit BFV
  slot, CKKS degree/2) stay inline — they cannot move into the scoped rules,
  which are generated from the @AI* annotations and must not be hand-edited.
- CLAUDE.md 19,175 -> 16,100 bytes with nothing lost, only relocated.

Both vendored vibetags-usage skill copies were stale snapshots (.claude at RC5,
.gemini at 1.0.0) of a canonical file that is already RC6 upstream, so neither
documented .vibetags-root-index — the very feature this repo relies on for its
lean root block. Re-vendored both from vibetags 1.0.0-RC6.

blindbean-annotations was the only library module with zero @AI* annotations
despite being the API every consumer compiles against; @AIPublicAPI now guards
BlindEntity, Homomorphic, BlindNested and Scheme against a rename or a new
required attribute. Verified with JDK 26 javac directly (the reactor build needs
JAVA_HOME on JDK 26; it is currently jdk-21, the trap CLAUDE.md already warns of).

Also opt into .github/copilot-instructions.md + .github/instructions/ so Copilot
gets the same guardrails (RC6 gives that pair the lean-index treatment), drop the
stale "(RC5)" claim from the hand-written .vibetags-roles headers, and add a
read-only permission allowlist.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/sessi